# inverse-singularity

./: .gitignore  CHANGELOG.md  CURIOSITY.md  Cargo.toml  README.md
examples/: audit.rs  collapse.rs  hermes_adapter.py  tuned.rs
framework/: MANIFESTO-LINGUAGEM.md  collapse_mode.md  hermes_nei_adapter.py  ist_engine.py  nei_engine.py
integrations/hermes/: ADAPTER_MANIFEST.md  README.md  SOUL_PRESERVATION.md
papers/: README.md
src/: lib.rs
theory/: capabilities-matrix.md  concepts-dictionary.md  execution-protocol.md  ist_axioms.tex  ist_distill_paper.md  ist_manifesto.md  nexus-v3-kernel.json  quantum-agentics.md  references.md  safety-protocol.md
