[package]
name = "nei_engine"
version = "0.5.0"          # bumped from 0.4.x (Python) to 0.5.0 (Rust primary)
edition = "2021"
rust-version = "1.74"
description = "NEI — Negative Entropy Injection Core. The runtime expression of Inverse Singularity Theory, in Rust."
license = "MIT"
repository = "https://github.com/ankinow/inverse-singularity"
keywords = ["inverse-singularity", "constraint", "entropy", "agent", "sovereign"]
categories = ["mathematics", "no-std", "embedded"]
readme = "README.md"

# ─────────────────────────────────────────────────────────────
#  AXIOM 1 — Constraint Primacy
#  AXIOM 2 — Density-Complexity Divergence
#  AXIOM 3 — Collapse Mode Convergence
#  AXIOM 4 — Sovereign Invariant
#
# ─────────────────────────────────────────────────────────────
#  Dependencies (optional only — zero non-dev deps when not
#  requested). `serde` is gated behind the `serde` feature and
#  is the ONLY optional dependency allowed by the axioms. It
#  exists for downstream tooling that needs to serialize NEI
#  records; the core engine compiles without it.
# ─────────────────────────────────────────────────────────────

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

# ─────────────────────────────────────────────────────────────

[lib]
name = "nei"
path = "src/lib.rs"

[[example]]
name = "collapse"
path = "examples/collapse.rs"

[[example]]
name = "audit"
path = "examples/audit.rs"

[[example]]
name = "tuned"
path = "examples/tuned.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"            # no unwind tables — Sovereign Invariant at the runtime layer

[profile.dev]
opt-level = 0
debug = true
